feat: Running service, time ran out so cut the tests, solution not 100% complete
