# controllers/controller.go
@@ -1,16 +1,14 @@
 package controllers
 
 import (
-	"RocketService/interfaces"
 	"RocketService/services"
 )
 
 type Controller struct {
-	MessageService interfaces.MessageService
+	MessageService services.MessageServiceInterface
+	RocketService  services.RockerServiceInterface
 }
 
-func NewController() *Controller {
-	return &Controller{
-		MessageService: services.NewMessageService(),
-	}
+func NewController() Controller {
+	return Controller{}
 }
