# entities/rocket.go
@@ -1,10 +1,11 @@
 package entities
 
 type Rocket struct {
-	ID         string
-	Type       string
-	Speed      RocketSpeed
-	Mission    string
-	Status     RocketStatus
-	LaunchDate string
+	ID          string
+	RocketType  string
+	Speed       RocketSpeed
+	Mission     string
+	Status      RocketStatus
+	LaunchDate  string
+	EventCursor int
 }
